; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/e1000/extr_e1000_ethtool.c_e1000_link_test.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/e1000/extr_e1000_ethtool.c_e1000_link_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e1000_adapter = type { %struct.e1000_hw }
%struct.e1000_hw = type { i64, i32, i64 }

@e1000_media_type_internal_serdes = common dso_local global i64 0, align 8
@STATUS = common dso_local global i32 0, align 4
@E1000_STATUS_LU = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.e1000_adapter*, i32*)* @e1000_link_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @e1000_link_test(%struct.e1000_adapter* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.e1000_adapter*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.e1000_hw*, align 8
  %7 = alloca i32, align 4
  store %struct.e1000_adapter* %0, %struct.e1000_adapter** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.e1000_adapter*, %struct.e1000_adapter** %4, align 8
  %9 = getelementptr inbounds %struct.e1000_adapter, %struct.e1000_adapter* %8, i32 0, i32 0
  store %struct.e1000_hw* %9, %struct.e1000_hw** %6, align 8
  %10 = load i32*, i32** %5, align 8
  store i32 0, i32* %10, align 4
  %11 = load %struct.e1000_hw*, %struct.e1000_hw** %6, align 8
  %12 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @e1000_media_type_internal_serdes, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %37

16:                                               ; preds = %2
  store i32 0, i32* %7, align 4
  %17 = load %struct.e1000_hw*, %struct.e1000_hw** %6, align 8
  %18 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %17, i32 0, i32 1
  store i32 0, i32* %18, align 8
  br label %19

19:                                               ; preds = %31, %16
  %20 = load %struct.e1000_hw*, %struct.e1000_hw** %6, align 8
  %21 = call i32 @e1000_check_for_link(%struct.e1000_hw* %20)
  %22 = load %struct.e1000_hw*, %struct.e1000_hw** %6, align 8
  %23 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %19
  %27 = load i32*, i32** %5, align 8
  %28 = load i32, i32* %27, align 4
  store i32 %28, i32* %3, align 4
  br label %58

29:                                               ; preds = %19
  %30 = call i32 @msleep(i32 20)
  br label %31

31:                                               ; preds = %29
  %32 = load i32, i32* %7, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %7, align 4
  %34 = icmp slt i32 %32, 3750
  br i1 %34, label %19, label %35

35:                                               ; preds = %31
  %36 = load i32*, i32** %5, align 8
  store i32 1, i32* %36, align 4
  br label %55

37:                                               ; preds = %2
  %38 = load %struct.e1000_hw*, %struct.e1000_hw** %6, align 8
  %39 = call i32 @e1000_check_for_link(%struct.e1000_hw* %38)
  %40 = load %struct.e1000_hw*, %struct.e1000_hw** %6, align 8
  %41 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %40, i32 0, i32 2
  %42 = load i64, i64* %41, align 8
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %37
  %45 = call i32 @msleep(i32 4000)
  br label %46

46:                                               ; preds = %44, %37
  %47 = load i32, i32* @STATUS, align 4
  %48 = call i32 @er32(i32 %47)
  %49 = load i32, i32* @E1000_STATUS_LU, align 4
  %50 = and i32 %48, %49
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %54, label %52

52:                                               ; preds = %46
  %53 = load i32*, i32** %5, align 8
  store i32 1, i32* %53, align 4
  br label %54

54:                                               ; preds = %52, %46
  br label %55

55:                                               ; preds = %54, %35
  %56 = load i32*, i32** %5, align 8
  %57 = load i32, i32* %56, align 4
  store i32 %57, i32* %3, align 4
  br label %58

58:                                               ; preds = %55, %26
  %59 = load i32, i32* %3, align 4
  ret i32 %59
}

declare dso_local i32 @e1000_check_for_link(%struct.e1000_hw*) #1

declare dso_local i32 @msleep(i32) #1

declare dso_local i32 @er32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
